# easyexif

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo.cpp  exif.cpp  exif.h  export.h  test.sh
.github/workflows/: build.yml  format-check.yml
include/easyexif/: exif.h  exports.h
src/easyexif/: exif.cpp
test-images/: gps-invalid.jpg.expected  lens_info.jpg.expected  test2.jpg.expected
